--- a/Sasa_Plichta/index.html
+++ b/Sasa_Plichta/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <style> body{text-align: center;}</style>
+    <style> img src{text-align: center;}</style>
   </head>
   <body>
+    <h1> My name is Aluke-Bahad-Shadonai </h1>
+    <p> At the age of 3, I ran away from Seria to join Donald Trump. I lived in Somalia for 7 years. I am now being deported. lol #byebyeamerica </p>
     I enjoy partaking in trains.
+    <img src="https://files.foreignaffairs.com/styles/large-crop-landscape/s3/taxonomy-images/region-syria.jpg?itok=qxfNiu14">
     <a href="../index.html"> back</a>
   </body>
 </html>
